tests/functional/lang/eval-fail-assert-impl-equal.err.exp
error:
       … while evaluating the condition of the assertion '(true -> (2 == 3))'
         at /pwd/lang/eval-fail-assert-impl-equal.nix:1:1:
            1| assert true -> 2 == 3;
             | ^
            2| abort "unreachable"

       … while evaluating the right operand of the -> operator
         at /pwd/lang/eval-fail-assert-impl-equal.nix:1:13:
            1| assert true -> 2 == 3;
             |             ^
            2| abort "unreachable"

       error: an integer with value '2' is not equal to an integer with value '3'
